--- a/src/.htaccess
+++ b/src/.htaccess
@@ -11,7 +11,7 @@ php_value post_max_size 35M
   RewriteCond %{REQUEST_FILENAME} !index.php$
   RewriteCond %{REQUEST_FILENAME} !vendor(/.*)$
   RewriteCond %{REQUEST_FILENAME} !layout(/.*)?$
-  RewriteRule ^([^\/]*)(\/|$)([^\/]*)(\/|$)(.*) index.php?operation=$1&suboperation=$3 [L]
+  RewriteRule ^([^\/]*)(\/|$)([^\/]*)(\/|$)([^\/]*)(\/|$)(.*) index.php?operation=$1&suboperation=$3&subsuboperation=$5 [L]
 </IfModule>
 
 <Files cache/*>
