--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 	<name>BROKER</name>
 	<description>Broker</description>
 	<organization>
-		<name>Meertens Institute</name>
-		<url>http://www.meertens.knaw.nl/</url>
+		<name>Text Exploration</name>
+		<url>https://www.textexploration.orgl/</url>
 	</organization>
 	<developers>
 		<developer>
