Revert "change to textexploration"
This reverts commit 6975b5092d1b7ed2193780091e704b6914b988d1.

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
 	<name>BROKER</name>
 	<description>Broker</description>
 	<organization>
-		<name>Text Exploration</name>
-		<url>https://www.textexploration.orgl/</url>
+		<name>Meertens Institute</name>
+		<url>http://www.meertens.knaw.nl/</url>
 	</organization>
 	<developers>
 		<developer>
